[package]
name = "rtc"
version = "0.1.0"
authors = ["nebelgrau <nebelgrau@gmx.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"
stm32f1xx-hal = {version = "0.5.2", features = [ "rt", "stm32f103" ]}
cortex-m-semihosting = "0.3.2"
ds1307 = "0.2.1"

[profile.release]
debug = true
lto = true
opt-level = "z"